<resources>
    <string name="app_name">EcoSwap</string>
    <string name="titulo_iniciar_sesion">Iniciar Sesion</string>
    <string name="hint_correo_electronico">Correo Electrónico</string>
    <string name="hint_contrasenha">Contraseña</string>
    <string name="no_tienes_una_cuenta_text">¿No tienes una cuenta?</string>
    <string name="boton_registrarse_titulo">Registrate</string>
    <string name="titulo_registrarse_con_redes">O registrate con:</string>
    <string name="boton_google_titulo">Google</string>
    <string name="boton_facebook_titulo">Facebook</string>
    <string name="boton_twitter_titulo">Twitter</string>
    <string name="hint_nombre_de_usuario">Nombre de usuario</string>
    <string name="titulo_pantalla_registro">Registro</string>
    <string name="boton_foto_perfil_titulo">Foto de perfil</string>
    <string name="boton_iniciar_sesion_registro_titulo">¿Ya tienes una cuenta?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="titulo_intercambios_realizados">INTERCAMBIOS REALIZADOS</string>
    <string name="intercambios_pendientes">INTERCAMBIOS PENDIENTES</string>
    <string name="titulo_notificaciones">NOTIFICACIONES</string>
    <string name="titulo_chats">CHATS</string>
    <string name="no_hay_productos_publicados">No hay productos publicados</string>
</resources>