<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/datosInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:text="@string/titulo_iniciar_sesion"
            android:textAlignment="center"
            android:textSize="32sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailLogin"
                android:background="@drawable/edittext_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_correo_electronico"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordLogin"
                android:background="@drawable/edittext_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_contrasenha"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_marginBottom="25dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/gris_claro"
            android:textColor="@color/black"
            android:text="@string/titulo_iniciar_sesion" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textStyle="bold"
            android:text="@string/no_tienes_una_cuenta_text"/>
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:backgroundTint="@color/color_transparente"
            android:layout_marginTop="8dp"
            android:text="@string/boton_registrarse_titulo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/titulo_registrarse_con_redes" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/buttonGoogle"
                android:layout_width="30dp"
                android:layout_height="48dp"
                android:layout_marginEnd="8dp"
                android:text="@string/boton_google_titulo"
                android:background="@color/color_transparente"
                android:contentDescription="@string/boton_google_titulo"
                android:src="@drawable/googleg_standard_color_18"/>


            <ImageButton
                android:id="@+id/buttonTwitter"
                android:layout_width="40dp"
                android:layout_height="48dp"
                android:src="@drawable/twitter"
                android:text="@string/boton_twitter_titulo" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progresBarInicioSesion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progressBar10"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>