<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background_gradient"
    android:gravity="center"
    android:id="@+id/main">

    <LinearLayout
        android:id="@+id/datosRegistro"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_pantalla_registro"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:paddingBottom="24dp"/>

        <ImageButton
            android:id="@+id/fotoPerfilRegistroImage"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/foto_icono"
            android:contentDescription="Foto de perfil"
            android:background="@color/color_transparente"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:padding="8dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextNombreUsuarioRegistro"
                android:background="@drawable/edittext_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_nombre_de_usuario"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            android:layout_marginBottom="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextEmailRegistro"
                android:background="@drawable/edittext_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_correo_electronico"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPasswordRegistro"
                android:background="@drawable/edittext_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/hint_contrasenha"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/registroButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/boton_registrarse_titulo"
            android:layout_marginTop="24dp"
            android:padding="12dp"
            android:backgroundTint="@color/gris_claro"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/progressBarRegistro"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="gone"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBar11"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>